<resources>
    <string name="app_name">Android Master</string>
    <string name="login_username_ET"><font size="18">Username</font></string>
    <string name="login_pwd_ET"><font size="18">Password</font></string>
    <string name="login_login_btn">Login</string>
    <string name="login_signUp_btn">Sign up</string>
    <string name="login_signUp_TV">Sign up</string>
    <string name="login_needHelp_TV">Need Help?</string>
    <string name="register_title_TV">Sign up</string>
    <string name="register_username_ET"><font size="18">Username</font></string>
    <string name="register_pwd_ET"><font size="18">Password</font></string>
    <string name="register_confirmPwd_ET"><font size="18">Confirm Password</font></string>
    <string name="register_email_ET"><font size="18">Email Address</font></string>
    <string name="register_male_RB">Male</string>
    <string name="register_female_RB">Female</string>
    <string name="register_titleInRG_TV">Gender</string>
    <string name="register_confirm_Btn">Confirm</string>
    <string name="register_back_Btn">Back</string>

    <string name="navigation_title_account">Me</string>
    <string name="navigation_title_course">Courses</string>
    <string name="navigation_title_forum">Forum</string>

    <string name="profile_edit_image_rv_text">Tap to change (Optional）</string>
    <string name="gender_popup_null_TV">---</string>
    <string name="gender_popup_male_TV">Male</string>
    <string name="gender_popup_female_TV">Female</string>
    <string name="gender_popup_title_TV">Please scroll it and select your gender</string>
    <string name="gender_popup_cancel_TV">Cancel</string>
    <string name="facebook_app_id">1574771352590790</string>
    <string name="action_bar_done">Done</string>
    <string name="action_bar_next">Next</string>

    <string name="profile_edit_success_toast_content_TV">Profile Updated!</string>
    <string name="feedback_submit_success_toast_content_TV">Submitted!</string>
    <string name="update_password_success_toast_content_TV">Updated!</string>

    <string name="splash_bottom_TV">Learn Android Company right ⓒ 2017</string>

    <string name="gender_text_view_male">Male</string>
    <string name="gender_text_view_female">Female</string>

    <string name="action_bar_title_profile_edit"><font size="20">Profile Edit</font></string>
    <string name="action_bar_title_user_feedback"><font size="20">Feedback</font></string>
    <string name="action_bar_title_explore"><font size="20">Explore</font></string>
    <string name="action_bar_title_course_map"><font size="20">Course Map</font></string>
    <string name="action_bar_title_account"><font size="20">Account</font></string>
    <string name="action_bar_title_achievements"><font size="20">Achievements</font></string>
    <string name="action_bar_title_acknowledgements"><font size="20">Acknowledgements</font></string>

    <string name="course_fragments"><font size="20">Fragments</font></string>
    <string name="course_user_interface"><font size="20">User Interface</font></string>
    <string name="terms_and_conditions"><font size="20">Terms and Conditions</font></string>
    <string name="privacy_policy"><font size="20">Privacy Policy</font></string>
    <string name="course_intent"><font size="20">Intent &amp; Activity</font></string>
    <string name="course_passing_data"><font size="20">Data Passing</font></string>
    <string name="course_database"><font size='20'>Database</font></string>
    <string name="course_permission"><font size='20'>Permission</font></string>

    <string name="fragment_quiz_info_title_TV">Practice Questions on Fragments</string>
    <string name="static_fragment_quiz_info_title_TV">Practice Questions on Defining Fragments Statically</string>
    <string name="dynamic_fragment_quiz_info_title_TV">Practice Questions on Defining Fragments Dynamically</string>
    <string name="ui_quiz_info_title_TV">Practice Questions on User Interface</string>
    <string name="android_activity_quiz_info_title_TV">Practice Questions on Android Activities</string>
    <string name="intent_quiz_info_title_TV">Practice Questions on Intent</string>
    <string name="broadcast_quiz_info_title_TV">Practice Questions on Broadcast</string>
    <string name="database_quiz_info_title_TV">Practice Questions on Database</string>

    <string name="fragment_quiz_info_questionNum_TV">5 questions, 1 point per question</string>
    <string name="static_fragment_quiz_info_questionNum_TV">2 questions, 1 point per question</string>
    <string name="dynamic_fragment_quiz_info_questionNum_TV">3 questions, 1 point per question</string>
    <string name="ui_quiz_info_questionNum_TV">4 questions, 1 point per question</string>
    <string name="android_activity_quiz_info_questionNum_TV">5 questions, 1 point per question</string>
    <string name="intent_quiz_info_questionNum_TV">2 questions, 1 point per question</string>
    <string name="broadcast_quiz_info_questionNum_TV">2 questions, 1 point per question</string>
    <string name="database_quiz_info_questionNum_TV">2 questions, 1 point per question</string>

    <string name="quiz_info_score_label_TV">Your Score</string>
    <string name="quiz_info_attempts_label_TV">Attempts</string>
    <string name="quiz_info_attempts_content_TV">Multiple</string>
    <string name="quiz_info_submitbtn_start">Start</string>
    <string name="quiz_info_to_pass_label_TV">To Pass</string>

    <string name="ui_quiz_info_to_pass_content_TV">70% or higher</string>
    <string name="dynamic_fragment_quiz_info_to_pass_content_TV">60% or higher</string>
    <string name="android_activity_quiz_info_to_pass_content_TV">80% or higher</string>
    <string name="fragment_quiz_info_to_pass_content_TV">80% or higher</string>
    <string name="static_fragment_quiz_info_to_pass_content_TV">100%</string>
    <string name="intent_quiz_info_to_pass_content_TV">100%</string>
    <string name="broadcast_quiz_info_to_pass_content_TV">100%</string>
    <string name="database_quiz_info_to_pass_content_TV">100%</string>

    <string name="cancel_btn_popup_cancel_btn">Cancel</string>
    <string name="cancel_btn_popup_yes_btn">Yes, I\'m sure</string>
    <string name="submit_popup_cancel_btn">Cancel</string>
    <string name="submit_popup_yes_btn">Yes, I\'m sure</string>
    <string name="cancel_quiz_popup_leave_btn">Leave</string>
    <string name="cancel_quiz_popup_stay_btn">Stay</string>
    <string name="cancel_feedback_popup_no_btn">No</string>
    <string name="cancel_feedback_popup_yes_btn">Yes</string>

    <string name="cancel_btn_title_TV">
        Are you sure you want to discard changes to your edits?
    </string>
    <string name="cancel_btn_content_TV">
        Changes to details will not be saved.
    </string>
    <string name="one_question_unanswered">
         "There is 1 question that you didn't answer. Are you sure you want to submit your quiz?"
    </string>
    <string name="some_questions_unanswered">
         "Are you sure you want to submit your quiz?"
    </string>
    <string name="cancel_quiz_popup_title_TV">
        Are you sure you want to leave this quiz? Your process won\'t be saved.
    </string>
    <string name="cancel_feedback_popup_title_TV">
        Are you sure you want to discard your feedback?
    </string>
    <string name="submit_feedback_popup_title_TV">
        Are you sure you want to submit your feedback?
    </string>
    <string name="logout_popup_title_TV">
        Are you sure you want to logout?
    </string>
    <string name="discard_change_password_popup_title_TV">
        Are you sure you want to discard your changes?
    </string>

    <string name="feedback_title_ET"><font size="15">Title</font></string>
    <string name="feedback_content_ET"><font size="15">Please provide us your feedback.</font></string>
    <string name="feedback_contact_detail_label_TV">Contact Details</string>
    <string name="feedback_contact_detail_content_ET"><font size="15">Please leave your email address</font></string>
    <string name="current_password_ET"><font size="15">Current Password</font></string>
    <string name="new_password_ET"><font size="15">New Password</font></string>
    <string name="confirm_new_password_ET"><font size="15">Confirm Passwords</font></string>

    <string name="background_image_references_TV">Background Image References</string>
    <string name="acknowledgements_references_TV">References</string>
    <string name="course_content_references_TV">Course Content</string>
    <string name="course_quiz_references_TV">Course Quizzes</string>

    <string name="achievements_points_TV">Your Score</string>
    <string name="achievements_ui_label_TV">User Interface</string>
    <string name="achievements_intent_label_TV">Activity &amp; Intent</string>
    <string name="achievements_data_passing_label_TV">Data Passing</string>
    <string name="achievements_fragment_label_TV">Fragments</string>
    <string name="achievements_database_label_TV">Database</string>
    <string name="achievements_permission_label_TV">Permission</string>

    <string name="achievements_passed">Passed</string>
    <string name="achievements_incomplete">Incomplete</string>
    <string name="achievements_for_your_information">Taken/Not Taken</string>
</resources>
