<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSuperLightGrey"
    tools:context="sg.edu.nus.learnandroid.ChangePasswordActivity">

    <EditText
        android:id="@+id/current_password_ET"
        android:layout_width="match_parent"
        android:background="@color/colorWhite"
        android:hint="@string/current_password_ET"
        android:inputType="textPassword"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        app:layout_heightPercent="8%"
        app:layout_marginTopPercent="2%" />

    <EditText
        android:id="@+id/new_password_ET"
        android:layout_width="match_parent"
        android:layout_below="@+id/current_password_ET"
        android:background="@color/colorWhite"
        android:hint="@string/new_password_ET"
        android:inputType="textPassword"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        app:layout_heightPercent="8%"
        app:layout_marginTopPercent="2%" />

    <EditText
        android:id="@+id/confirm_new_password_ET"
        android:layout_width="match_parent"
        android:layout_below="@+id/new_password_ET"
        android:background="@color/colorWhite"
        android:hint="@string/confirm_new_password_ET"
        android:inputType="textPassword"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        app:layout_heightPercent="8%" />

</android.support.percent.PercentRelativeLayout>
